force-app/main/default/objects/Error_Log__c/fields/Exception_Msg__c.field-meta.xml
<CustomField>
    <fullName>Exception_Msg__c</fullName>
    <label>Exception Msg</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>