force-app/main/default/objects/Error_Log__c/fields/Exception_type__c.field-meta.xml
<CustomField>
    <fullName>Exception_type__c</fullName>
    <label>Exception type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>