force-app/main/default/objects/Error_Log__c/fields/More_Detail__c.field-meta.xml
<CustomField>
    <fullName>More_Detail__c</fullName>
    <label>More Detail</label>
    <type>TextArea</type>
</CustomField>